hr fixes on mobile

--- a/code/styles.css
+++ b/code/styles.css
@@ -147,10 +147,10 @@ hr {
 	height: 15px;
 	border: 0;
 	margin: 28px 0 28px 90px;
-	/* Comment out the following three lines if you want a modern gradient,
+	background-repeat: no-repeat;
+	/* Comment out the following two lines if you want a modern gradient,
 	   otherwise you'll get the HR image included with Nexus.app */
 	background-image: url('hrule_fade_8gray.tiff');
-	background-repeat: no-repeat;
 	background-size: 470px;
 	}
 
@@ -297,7 +297,6 @@ h3 {
 
 	hr {
 		margin-left: 14.75%;
-		background-size: 90%;
 		}
 }
 
